<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    android:background="@drawable/my_layout_shape"
    android:orientation="vertical"
    android:padding="@dimen/size_4"
    tools:context=".activity.MainActivity">

    <TextView
        style="@style/MyText.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_2"
        android:text="@string/app_name"
        android:textColor="@color/primary_dark" />

    <LinearLayout
        style="@style/MatchWrap.MyLayout"
        android:layout_marginTop="@dimen/size_4"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/Weight_1.Width_0"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/actv_GpsStatus"
                style="@style/MyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpsStatus" />

            <TextView
                android:id="@+id/actv_InetStatus"
                style="@style/MyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inetStatus" />

            <TextView
                style="@style/MyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/actv_GpsData"
                style="@style/MyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpsDataOff" />

            <TextView
                android:id="@+id/actv_GpsTime"
                style="@style/MyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpsTimeOff" />

            <TextView
                style="@style/MyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/actvDistance"
                style="@style/MyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passedDistanceInM" />

        </LinearLayout>

        <Switch
            android:id="@+id/sc_TrackingStatus"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_4"
            android:layout_weight="1"
            android:clickable="false"
            android:text="@string/sampleText"
            android:textAllCaps="false" />

    </LinearLayout>

    <FrameLayout
        style="@style/MatchMatch.Center"
        android:layout_marginTop="@dimen/size_4"
        android:background="@drawable/my_layout_shape_light">

    </FrameLayout>

</LinearLayout>